refactor: Change all twin names to building
