# server/sensor-service/src/models/peopleCountSignal.ts
@@ -2,35 +2,35 @@ import { Schema } from 'mongoose';
 import * as mongoose from "mongoose";
 
 export interface IPeopleCount {
-    twin: string;
+    building: string;
     roomId: string;
     timestamp: number;
     peopleCount: number;
 }
 
 const peopleCountSchema = new Schema<IPeopleCount>({
-    twin: { type: String, required: true },
+    building: { type: String, required: true },
     roomId: { type: String, required: true },
     timestamp: { type: Number, required: true },
     peopleCount: { type: Number, required: true },
 });
 
-peopleCountSchema.index({ twin: 1, timestamp: -1 });
+peopleCountSchema.index({ building: 1, timestamp: -1 });
 
 export const PeopleCount = mongoose.model<IPeopleCount>('PeopleCount', peopleCountSchema);
 
 export interface PeopleCountParams {
-    twin: string;
+    building: string;
     roomId: string;
 }
 
 export interface DashboardPeopleCountParams {
-    twin: string;
+    building: string;
     roomId: string;
     timeRange: string;
 }
 
-export interface DashboardTwinPeopleCountParams {
-    twin: string;
+export interface DashboardBuildingPeopleCountParams {
+    building: string;
     timeRange: string;
 }
