# server/sensor-service/src/models/temperatureSignal.ts
@@ -2,35 +2,35 @@ import { Schema } from 'mongoose';
 import * as mongoose from "mongoose";
 
 export interface ITemperature {
-    twin: string;
+    building: string;
     roomId: string;
     timestamp: number;
     temperature: number;
 }
 
 const temperatureSchema = new Schema<ITemperature>({
-    twin: { type: String, required: true },
+    building: { type: String, required: true },
     roomId: { type: String, required: true },
     timestamp: { type: Number, required: true },
     temperature: { type: Number, required: true },
 });
 
-temperatureSchema.index({ twin: 1, timestamp: -1 });
+temperatureSchema.index({ building: 1, timestamp: -1 });
 
 export const Temperature = mongoose.model<ITemperature>('Temperature', temperatureSchema);
 
 export interface TemperatureParams {
-    twin: string;
+    building: string;
     roomId: string;
 }
 
 export interface DashboardTemperatureParams {
-    twin: string;
+    building: string;
     roomId: string;
     timeRange: string;
 }
 
-export interface DashboardTwinTemperatureParams {
-    twin: string;
+export interface DashboardBuildingTemperatureParams {
+    building: string;
     timeRange: string;
 }
