# server/sensor-service/src/router.ts
@@ -8,8 +8,8 @@ import {
     getAllTemperature,
     getPeopleCountDashboard,
     getTemperatureDashboard,
-    getEntireTwinPeopleCountDashboard,
-    getEntireTwinTemperatureDashboard
+    getEntireBuildingPeopleCountDashboard,
+    getEntireBuildingTemperatureDashboard
 } from "./controller/sensorController.js";
 
 const router = Router();
@@ -18,11 +18,11 @@ router.post('/peopleCount', postPeopleCount);
 router.post('/temperature', postTemperature);
 router.get('/peopleCount', getSinglePeopleCount);
 router.get('/temperature', getSingleTemperature);
-router.get('/peopleCount/entireTwin', getAllPeopleCount);
-router.get('/temperature/entireTwin', getAllTemperature);
+router.get('/peopleCount/entireBuilding', getAllPeopleCount);
+router.get('/temperature/entireBuilding', getAllTemperature);
 router.get('/peopleCount/dashboard', getPeopleCountDashboard);
 router.get('/temperature/dashboard', getTemperatureDashboard);
-router.get('/peopleCount/dashboard/entireTwin', getEntireTwinPeopleCountDashboard);
-router.get('/temperature/dashboard/entireTwin', getEntireTwinTemperatureDashboard);
+router.get('/peopleCount/dashboard/entireBuilding', getEntireBuildingPeopleCountDashboard);
+router.get('/temperature/dashboard/entireBuilding', getEntireBuildingTemperatureDashboard);
 
 export default router;
