# server/sensor-simulator/src/controller/simController.ts
@@ -3,8 +3,8 @@ import type { Simulator } from '../services/simulatorService.js';
 
 export const start = async (simulator: Simulator, req: Request, res: Response) => {
     try {
-        simulator.startOrAdd({ twinId: req.body.twinId, roomIds: req.body.roomIds });
-        res.status(200).json({ message: `Simulator started for ${req.body.twinId}` });
+        simulator.startOrAdd({ buildingId: req.body.buildingId, roomIds: req.body.roomIds });
+        res.status(200).json({ message: `Simulator started for ${req.body.buildingId}` });
     } catch (error: any) {
         res.status(400).json({ error: error.message });
     }
@@ -12,7 +12,7 @@ export const start = async (simulator: Simulator, req: Request, res: Response) =
 
 export const stop = async (simulator: Simulator, req: Request, res: Response) => {
     try {
-        simulator.stop(req.body.twinId);
+        simulator.stop(req.body.buildingId);
         res.status(200).json({ message: 'Simulator stopped' });
     } catch (error: any) {
         res.status(400).json({ error: error.message });
@@ -21,10 +21,10 @@ export const stop = async (simulator: Simulator, req: Request, res: Response) =>
 
 export const isRunning = async (simulator: Simulator, req: Request, res: Response) => {
     try {
-        if (!req.query.twinId) {
+        if (!req.query.buildingId) {
             return res.status(200).json({ isRunning: false });
         }
-        const running = simulator.getIsRunning(req.query.twinId as string);
+        const running = simulator.getIsRunning(req.query.buildingId as string);
         res.status(200).json({ isRunning: running });
     } catch (error: any) {
         res.status(400).json({ error: error.message });
